Fix rounding problem when entering investment transactions

BUG: 439861
FIXED-IN: 5.1.3